--- a/machine.html
+++ b/machine.html
@@ -235,7 +235,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/novetta/jobs/4481354002'>Job Application for Machine Learning Intern at Novetta</a></h5> 
+<h5><a href='https://boards.greenhouse.io/novetta/jobs/4481354002'>Job Application for Machine Learning Intern at Novetta</a></h5> 
 <p><span class="badge badge-light">Mc Lean, Virginia</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -270,7 +270,7 @@ ML;?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='https://tensortechnologies.recruitee.com/o/machine-learning-engineer-2'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensortechnologies.recruitee.com/o/machine-learning-engineer-2'>
       Machine Learning Engineer - Tensor Technologies
     </a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
@@ -375,7 +375,7 @@ deploy Machine Learning models into the company's core services. You'll be?...</
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idalab.softgarden.io/job/5132937/Machine-Learning-Engineer-for-Drug-Development-at-HotSpot-Therapeutics-m-f-d-?jobDbPVId=14043567&amp;l=en'>Machine Learning Engineer for Drug Development at HotSpot Therapeutics (m/f/d) at idalab GmbH | softgarden</a></h5> 
+<h5><a href='https://idalab.softgarden.io/job/5132937/Machine-Learning-Engineer-for-Drug-Development-at-HotSpot-Therapeutics-m-f-d-?jobDbPVId=14043567&amp;l=en'>Machine Learning Engineer for Drug Development at HotSpot Therapeutics (m/f/d) at idalab GmbH | softgarden</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -462,7 +462,7 @@ and?...</p>
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foursquare26/jobs/1920039'>Job Application for Software Engineer - Machine Learning  at Foursquare</a></h5> 
+<h5><a href='https://boards.greenhouse.io/foursquare26/jobs/1920039'>Job Application for Software Engineer - Machine Learning  at Foursquare</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
