--- a/deep-learning.html
+++ b/deep-learning.html
@@ -134,7 +134,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -142,7 +142,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -187,7 +187,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">Bangkok</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/haydenai/d4eab634-1f8e-4ef9-92da-73e79d6d95b5'>Hayden AI Technologies - Deep Learning Engineer - Scene ...</a></h5> 
+<h5><a href='https://jobs.lever.co/haydenai/d4eab634-1f8e-4ef9-92da-73e79d6d95b5'>Hayden AI Technologies - Deep Learning Engineer - Scene ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 3, 2019 ... Deep Learning Engineer - Scene Understanding. San Francisco. Engineering. 
 Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?...</p>
@@ -216,7 +216,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999696343996-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999696343996-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -236,11 +236,11 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/1361EF4831'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/1361EF4831'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/67A1CABDE7'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/67A1CABDE7'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -276,7 +276,7 @@ with a?...</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wandb/3d5776dc-328e-4b31-ace5-ea22abb144ab'>Weights & Biases - Deep Learning Instructor</a></h5> 
+<h5><a href='https://jobs.lever.co/wandb/3d5776dc-328e-4b31-ace5-ea22abb144ab'>Weights & Biases - Deep Learning Instructor</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
@@ -344,7 +344,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ai-jobs.net/job/solutions-architect-energy-deep-learning/'>Solutions Architect, Energy - Deep Learning | ai-jobs.net</a></h5> 
+<h5><a href='https://ai-jobs.net/job/solutions-architect-energy-deep-learning/'>Solutions Architect, Energy - Deep Learning | ai-jobs.net</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-17</p>
 <hr/>
@@ -398,7 +398,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cardinalhire/cf15bd50-20e2-4c24-b490-521f1a8ceae9'>Stealth Startup - Deep Learning Research Scientist - up to $600,000 + up to 10% Equity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/cf15bd50-20e2-4c24-b490-521f1a8ceae9'>Stealth Startup - Deep Learning Research Scientist - up to $600,000 + up to 10% Equity</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -418,7 +418,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">Kharkiv Oblast, Ukraine</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... We are offering a career opportunity combining both your passion and skills as a 
 software engineer while also allowing you to work with state-of-the-art?...</p>
@@ -431,7 +431,7 @@ software engineer while also allowing you to work with state-of-the-art?...</p>
 <p><span class="badge badge-light">Barcelona Barcelona  Barcelona  Tallinn, Harju County, Estonia</span></p>
 <p>Posted on: 2019-09-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thomsonreuters.wd5.myworkdayjobs.com/External_Career_Site/job/CHE-Zug-LandisGyr-Strasse-3/Senior-Data-Scientist---Deep-Learning_JREQ128968?source=Applicant_Source_Thomson_Reuters_Career_Center'>Senior Data Scientist - Deep Learning</a></h5> 
+<h5><a href='https://thomsonreuters.wd5.myworkdayjobs.com/External_Career_Site/job/CHE-Zug-LandisGyr-Strasse-3/Senior-Data-Scientist---Deep-Learning_JREQ128968?source=Applicant_Source_Thomson_Reuters_Career_Center'>Senior Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... We are currently looking for a senior data scientist with a passion for deep 
 learning to join the team at Thomson Reuters Labs in Zug. What do we do?</p>
@@ -440,7 +440,7 @@ learning to join the team at Thomson Reuters Labs in Zug. What do we do?</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/caper/jobs/4404507002'>Job Application for Deep Learning/CV Engineer at Caper</a></h5> 
+<h5><a href='https://boards.greenhouse.io/caper/jobs/4404507002'>Job Application for Deep Learning/CV Engineer at Caper</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... About Us: Caper builds smart shopping carts powered by deep learning and 
 computer vision to enable a seamless grab-and-go retail experience. We differ 
