--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/arcadia/jobs/4497342002'>Job Application for Technical Project Manager at Arcadia.io</a></h5> 
+<p><span class="badge badge-light">Pittsburgh</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://www.fitzii.com/job/44459?s=ft'>Project Manager | Thermal Systems</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
@@ -102,7 +106,7 @@
 <p><span class="badge badge-light">San Francisco New York Los Angeles</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1935609'>Job Application for Onboarding & Product Enablement Program Manager at Reddit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1935609'>Job Application for Onboarding & Product Enablement Program Manager at Reddit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -118,11 +122,11 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698321278-field-project-manager'>K4Connect Field Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698321278-field-project-manager'>K4Connect Field Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318353-project-manager'>CapTech Consulting Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318353-project-manager'>CapTech Consulting Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -284,7 +288,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Los Angeles, California United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/liferay/job/oQ5mbfwc'>Liferay, Inc. Careers - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liferay/job/oQ5mbfwc'>Liferay, Inc. Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Budapest, Hungary  Los Angeles Brazil</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -296,7 +300,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Lely1/743999698272026-project-manager-product-development-maassluis-fulltime-'>Lely Project Manager Product Development (Maassluis, fulltime) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Lely1/743999698272026-project-manager-product-development-maassluis-fulltime-'>Lely Project Manager Product Development (Maassluis, fulltime) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -338,7 +342,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://rhconstruction.applytojob.com/apply/uPh5YdJkft/Construction-Project-Manager'>Construction Project Manager - R&H Construction - Career Page</a></h5> 
+<h5><a href='http://rhconstruction.applytojob.com/apply/uPh5YdJkft/Construction-Project-Manager'>Construction Project Manager - R&H Construction - Career Page</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -366,7 +370,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://brandloyalty.recruitee.com/o/programme-manager-7'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brandloyalty.recruitee.com/o/programme-manager-7'>
       Programme Manager - BrandLoyalty
     </a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
@@ -417,7 +421,7 @@ years of experience in structural evaluation, forming and falsework analysis,?..
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241393-junior-project-manager-m-f-x-'>Netcentric Junior Project Manager (m/f/x) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241393-junior-project-manager-m-f-x-'>Netcentric Junior Project Manager (m/f/x) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -449,10 +453,6 @@ years of experience in structural evaluation, forming and falsework analysis,?..
 <hr/>
 <h5><a href='https://boards.greenhouse.io/intelextechnologies/jobs/1931711'>Job Application for Project Manager  at Intelex Technologies</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/5nn8k3mzcfztodfcqf6mqr3xyh'>Product Manager / Project Manager | Strategic Employment</a></h5> 
-<p><span class="badge badge-light">Glendale, CA  Glendale, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
