--- a/full-stack.html
+++ b/full-stack.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://stantec.referrals.selectminds.com/jobs/application-developer-full-stack.net-marketing-7018'>Application Developer (Full Stack.Net), Marketing - Stantec Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Edmonton, Alberta Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ohC3afwQ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n2VDmMwd'>ServiceNow Careers - Senior Full Stack Engineer</a></h5> 
@@ -74,7 +74,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/useloom/f300409a-d4cd-4510-b562-4e7afbff65ec'>Loom - Senior Full Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/useloom/f300409a-d4cd-4510-b562-4e7afbff65ec'>Loom - Senior Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -165,7 +165,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Madrid</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jrmconstructionmanagementllc.applytojob.com/apply/E03d0CaxBT/Full-Stack-Developer'>Full Stack Developer - JRM Construction Management, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jrmconstructionmanagementllc.applytojob.com/apply/E03d0CaxBT/Full-Stack-Developer'>Full Stack Developer - JRM Construction Management, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -195,11 +195,11 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Burlington, MA  Boston</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/rcooo9r184xas467gqcshwohda'>Full Stack PHP Software Engineer | Strategic Employment</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/rcooo9r184xas467gqcshwohda'>Full Stack PHP Software Engineer | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=n3UBlMwa'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=n3UBlMwa'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -233,11 +233,11 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://apply.workable.com/pandell/j/D1A17EAA7C/'>Full Stack Web Developers - Pandell</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/pandell/j/D1A17EAA7C/'>Full Stack Web Developers - Pandell</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://linx.recruiterbox.com/jobs/fk03i2j/'>
+<h5><a href='https://linx.recruiterbox.com/jobs/fk03i2j/'>
     Desenvolvedor Full Stack SR at Linx
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -263,7 +263,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appdirect/jobs/4306100002'>Job Application for D?veloppeur full stack, place de march? / Full Stack Developer, Marketplace Core at AppDirect</a></h5> 
+<h5><a href='https://boards.greenhouse.io/appdirect/jobs/4306100002'>Job Application for D?veloppeur full stack, place de march? / Full Stack Developer, Marketplace Core at AppDirect</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -323,7 +323,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Bengaluru, India  Bengaluru</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://liveaboard.recruitee.com/o/senior-full-stack-net-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://liveaboard.recruitee.com/o/senior-full-stack-net-developer'>
       Senior Full stack .Net Developer - LiveAboard.com BV
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -387,11 +387,11 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/prestigedevelopmentgroup/job/r6g8c6dsm154u6sx4bochfmw1e'>Full Stack Engineer  | Prestige Development Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/prestigedevelopmentgroup/job/r6g8c6dsm154u6sx4bochfmw1e'>Full Stack Engineer  | Prestige Development Group</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zypone.join.com/jobs/460238-full-stack-engineer-laravel-vue-lumen-m-f-d'>Job @ ZYP.ONE (Berlin): Full-Stack Engineer (Larav... | JOIN</a></h5> 
+<h5><a href='https://zypone.join.com/jobs/460238-full-stack-engineer-laravel-vue-lumen-m-f-d'>Job @ ZYP.ONE (Berlin): Full-Stack Engineer (Larav... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -447,7 +447,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/atomic/7f22cda4-549c-45b8-93f8-0265df3cf0dc'>Atomic - Full Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/atomic/7f22cda4-549c-45b8-93f8-0265df3cf0dc'>Atomic - Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -459,11 +459,11 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e575224'>Stellenangebot: Software Engineering ? FullStack Developer (m/f/x), Berlin 100% ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e575224'>Stellenangebot: Software Engineering ? FullStack Developer (m/f/x), Berlin 100% ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698115635-concepteur-developpeur-fullstack'>onepoint Concepteur D?veloppeur Fullstack | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698115635-concepteur-developpeur-fullstack'>onepoint Concepteur D?veloppeur Fullstack | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
